--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -181,3 +181,21 @@ input {
     color: $state-danger-text;
   }
 }
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid #eaeaea;
+  }
+}
+
+.users li {
+  overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid #eaeaea;
+}
