--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 			            </ul>
 		        	</li>
 		        <% else %>
-		        	<li><%= link_to "Log in", '#' %></li>
+		        	<li><%= link_to "Log in", 'login' %></li>
 		        <% end %>
 	        </ul>
         </nav>
