gems on master branch modified

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -154,6 +154,19 @@ aside {
   margin-top: 15px;
 }
 
+/* Users index*/
+
+.users {
+  list-style: none;
+  margin: 0;
+}
+
+.users li {
+  overflow: auto;
+  padding: 10px 0;
+  border-bottom: 1px solid $gray-lighter;
+}
+
 /* forms */
 
 input, textarea, select, .uneditable-input {
