--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -277,6 +277,25 @@ input {
   }
 }
 
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+.checkbox span {
+  margin-left: 20px;
+  font-weight: normal;
+}
+
 /* Users index */
 
 .users {
